---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_fail_todo/pipe.arc
---
fun test1() {
    let a: i32 = 3 in
    let b: fun(i32) -> i32 = |x| {
        x + 1
    } in
    let c: fun(i32) -> i32 = |x| {
        x - 1
    } in
    let d: i32 = a |> b |> c in
    d
}
fun test2() {
    let a: i32 = 3 in
    let b: fun(i32, i32) -> (i32, i32) = |(x, y)| {
        (y, x)
    } in
    let c: fun(i32) -> i32 = |x| {
        x + 1
    } in
    let d: (i32, i32) = (a, a) |> b |> (c, c) in
    d
}

